# sigrank-agent

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/sigrank/: __init__.py
src/sigrank/adapters/: __init__.py  base.py  claude_code.py
src/sigrank/cli/: main.py
src/sigrank/config/: settings.py
src/sigrank/db/: store.py
src/sigrank/metrics/: background.py  compression.py  cross_thread.py  prompt_complexity.py  session_depth.py  token_throughput.py
src/sigrank/parsers/: session.py
src/sigrank/publish/: signing.py
src/sigrank/snapshots/: builder.py  canonicalize.py
